CMBSandbox4/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Total_Amount_Paid__c</fullName>
        <inlineHelpText>This is summarizing the Transaction Credit Line Items</inlineHelpText>
        <label>Amount Paid</label>
        <summarizedField>Transaction_Line_Credit__c.Amount__c</summarizedField>
        <summaryForeignKey>Transaction_Line_Credit__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Commissions_Paid__c</fullName>
        <description>Total commission paid for this invoice.It is rollup from commission__c.</description>
        <inlineHelpText>Total commission paid for this invoice.</inlineHelpText>
        <label>Total Commissions Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Hours__c</fullName>
        <formula>Hours_Roll_Up__c  +  Adjustments__c +  Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Projects__c</fullName>
        <label>Total # of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_Contractor_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Contractor Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaid__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Paid&quot;),true,false)</formula>
        <inlineHelpText>IF(ISPICKVAL(Status__c, &quot;Paid&quot;),true,false)</inlineHelpText>
        <label>isPaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSent__c</fullName>
        <formula>or(
 CONTAINS(TEXT(Status__c), &quot;Sent&quot;),
 not(isblank(Date_Sent__c ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>or(
 CONTAINS(TEXT(Status__c), &quot;Sent&quot;),
 not(isblank(Date_Sent__c ))
)</inlineHelpText>
        <label>isSent</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_Sent__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_CloudMyBiz</fullName>
        <columns>NAME</columns>
        <columns>Invoice_ID__c</columns>
        <columns>Project_Harvest__c</columns>
        <columns>Account__c</columns>
        <columns>Sum_of_Contractor_Hours__c</columns>
        <columns>Total_Invoice_Hours__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>CloudMyBiz</value>
        </filters>
        <label>Client: CloudMyBiz</label>
    </listViews>
    <listViews>
        <fullName>All_EMC</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Express m</value>
        </filters>
        <label>Client: EMC</label>
    </listViews>
    <listViews>
        <fullName>All_EMC_Not_Paid</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Express m</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Open - Ready to Process,Open - Pending &quot;Send&quot;,Sent,Partially Paid</value>
        </filters>
        <label>Client: EMC (Not Paid)</label>
    </listViews>
    <listViews>
        <fullName>All_ICF</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Infinity</value>
        </filters>
        <label>Client: ICF</label>
    </listViews>
    <listViews>
        <fullName>All_ICF_Not_Paid</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Total_Amount_Due__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Infinity</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Client: ICF (Not Paid)</label>
    </listViews>
    <listViews>
        <fullName>Canceled_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Total_Invoice_Hours__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Status__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Days_Since_Created__c</columns>
        <columns>Start_Date1__c</columns>
        <columns>End_Date1__c</columns>
        <columns>Internal_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>cLOUDMYBIZ</value>
        </filters>
        <label>Canceled - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Client_Forward_Financing_open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Description_On_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Forward</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Client: Forward Financing (open)</label>
    </listViews>
    <listViews>
        <fullName>Client_Imperial</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Impe</value>
        </filters>
        <label>Client: Imperial</label>
    </listViews>
    <listViews>
        <fullName>Client_Imperial_open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Description_On_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Imperial</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Client: Imperial (open)</label>
    </listViews>
    <listViews>
        <fullName>Client_InfoLogistic_open</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Description_On_Invoice__c</columns>
        <columns>Total_Invoice_Hours__c</columns>
        <columns>Start_Date1__c</columns>
        <columns>End_Date1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Info</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Canceled</value>
        </filters>
        <label>Client: InfoLogistics (open)</label>
    </listViews>
    <listViews>
        <fullName>Client_InfoLogistics</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Cost__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>Info</value>
        </filters>
        <label>Client: InfoLogistics</label>
    </listViews>
    <listViews>
        <fullName>Client_MultiFunding_Sent_Unpaid</fullName>
        <columns>NAME</columns>
        <columns>Total_Amount_Due__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Date_Followed_Up__c</columns>
        <columns>Description_On_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>multi</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Sent,Partially Paid</value>
        </filters>
        <label>Client: MultiFunding (Sent/Unpaid)</label>
    </listViews>
    <listViews>
        <fullName>Client_NLF_All</fullName>
        <columns>NAME</columns>
        <columns>Total_Amount_Due__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Date_Followed_Up__c</columns>
        <columns>Description_On_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>bizfi</value>
        </filters>
        <label>Client: NLF (All)</label>
    </listViews>
    <listViews>
        <fullName>Client_NLF_Sent_Unpaid</fullName>
        <columns>NAME</columns>
        <columns>Total_Amount_Due__c</columns>
        <columns>Price_Conga__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Days_in_Status__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>Date_Followed_Up__c</columns>
        <columns>Description_On_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>bizfi</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Sent,Partially Paid</value>
        </filters>
        <label>Client: NLF (Sent/Unpaid)</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Approved_Ready_Only_by_Henry</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Open - Approved &amp; Ready to Send&quot;),
 NOT( $User.Id   = &apos;00560000001vAOX&apos;)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only Henry Abenaim can approve Invoices. Please change the status to Open - Pending HA Review&quot; and that will send a notification to Henry to review the invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Cancle_with_open_Balance</fullName>
        <active>true</active>
        <description>Cannot cancel the invoice if there is an open balance. Need to first add a credit line item.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Canceled&quot;) ,
 Total_Amount_Due__c &gt;1
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot mark the Invoice Status as &quot;Canceled&quot; when there is an open balance. Need to first add a credit line item to reduce the Amount Due.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_mark_as_Paid_as_there_is_no_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
  ISBLANK(Date_Sent__c) , 
ISPICKVAL(Status__c, &quot;Paid&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Date_Sent__c</errorDisplayField>
        <errorMessage>Cannot mark as Paid as there is no Date Sent. Please update the Date Sent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_send_without_Approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
 Approved_to_Send__c =false, 
ISPICKVAL(Status__c,&quot;Sent&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Approved_to_Send__c</errorDisplayField>
        <errorMessage>Cannot Send Invoices when Approved_to_Send__c = false. That checkbox needs to be true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Confirm_contractor_hours_prior_to_Send</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
Updated_Contractor_Hours__c  = false,
ispickval(Status__c, &quot;Sent&quot;)
)</errorConditionFormula>
        <errorDisplayField>Updated_Contractor_Hours__c</errorDisplayField>
        <errorMessage>Need to Update Contractor Hours prior to sending the invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Paid_and_Status_Not_Paid</fullName>
        <active>true</active>
        <description>If Status=Paid then need date paid. If date paid is populated, then need Status=Paid</description>
        <errorConditionFormula>OR(
AND( 
ISBLANK(Date_Paid__c) ,
ISPICKVAL(Status__c, &quot;Paid&quot;) 
),
AND(
NOT(ISBLANK(Date_Paid__c)),
NOT(CONTAINS(TEXT(Status__c), &quot;Paid&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>Date_Paid__c</errorDisplayField>
        <errorMessage>If Status=Paid then need date paid. If date paid is populated, then need Status=Paid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Sent_blank_wen_Status_Sent</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK( Date_Sent__c ) ,
 ISPICKVAL(Status__c,&quot;Sent&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Date_Sent__c</errorDisplayField>
        <errorMessage>If Status=Sent then need Date Sent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_to_mark_Approved_to_Send_Checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Open - Approved &amp; Ready to Send&quot;),
 Approved_to_Send__c= false)</errorConditionFormula>
        <errorDisplayField>Approved_to_Send__c</errorDisplayField>
        <errorMessage>Need to mark Approved to Send Checkbox in order to change status to Open - Approved &amp; Ready to Send</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Henry_Can_change_Approved_to_Send</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Approved_to_Send__c = True,
PRIORVALUE(Approved_to_Send__c)=false,
 $User.Id  &lt;&gt; &quot;00560000001vAOX&quot;
)</errorConditionFormula>
        <errorDisplayField>Approved_to_Send__c</errorDisplayField>
        <errorMessage>Only Henry Can change Approved to Send</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opp_on_Inv_must_match_Opp_on_Project</fullName>
        <active>false</active>
        <errorConditionFormula>Project_Harvest__r.Opportunity__r.Id &lt;&gt; Opportunity_ID__c</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>The Opportunity on the Invoice record needs to match the Opportunity on the Project record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Needs_to_Match_Acct</fullName>
        <active>true</active>
        <description>Opportunity_Needs_to_Match_Acct</description>
        <errorConditionFormula>AND(
Account__r.Id &lt;&gt; Opportunity__r.AccountId,
Account__r.Id &lt;&gt; &quot;0016000000mYNSF&quot;
)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Opportunity Needs to be from the same Acct</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_paid_but_still_open_balance</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 Total_Amount_Due__c &gt;1,
ISPICKVAL(Status__c, &quot;Paid&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Cannot mark as paid - There is still an amount due. (Please enter a transaction for the payment amount).</errorMessage>
    </validationRules>
</CustomObject>